--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Print Hi</title>
+  <title>Print </title>
 </head>
 <body>
-  <h1>Hi</h1>
+  <h1>Pragna</h1>
 </body>
 </html>
